# launchpad-ha

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  check_hardware.py  install.sh  pyproject.toml  requirements.txt
packaging/: com.launchpad.ha.plist
src/ha_launchpad/: api.py  cli.py  config.py  controller.py  logging_config.py
src/ha_launchpad/backend/: mido_backend.py  mock_backend.py
src/ha_launchpad/config/: mapping.py  settings.py
src/ha_launchpad/core/: controller.py
src/ha_launchpad/core/logic/: feedback_manager.py  idle_manager.py  input_handler.py  led_manager.py
src/ha_launchpad/features/: color_picker.py  disco.py
src/ha_launchpad/infrastructure/ha/: client.py
src/ha_launchpad/infrastructure/midi/: interface.py  mido_backend.py  mock_backend.py  rotated_backend.py
src/ha_launchpad/utils/: rotate_pad.py
tests/integration/: test_ha_client.py
tests/unit/: test_mapping.py
tests/unit/core/: test_idle_manager.py  test_input_handler_restart.py
tests/unit/features/: test_color_picker.py
tests/unit/infrastructure/: test_rotated_backend.py
