[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-launchpad"
version = "0.1.0"
description = "Novation Launchpad to Home Assistant bridge"
requires-python = ">=3.11"
dependencies = [
	"mido>=1.2.10",
	"requests>=2.0",
	"python-dotenv>=1.0",
	"python-rtmidi>=1.4.0",
]

[project.scripts]
ha-launchpad = "ha_launchpad.cli:main"